[metadata]
name = sleepy
version = 1.2.1
description = find isolated places
author =  Andre Mueller
author_email = amuellerastro@gmail.com

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    branca==0.4.2
    certifi==2020.12.5
    chardet==4.0.0
    cycler==0.10.0
    folium==0.12.1
    geojson==2.5.0
    geojsoncontour==0.4.0
    gpxpy==1.4.2
    idna==2.10
    Jinja2==2.11.3
    kiwisolver==1.3.1
    MarkupSafe==1.1.1
    matplotlib==3.4.1
    numpy==1.20.2
    pandas==1.2.4
    Pillow==8.2.0
    pyparsing==2.4.7
    python-dateutil==2.8.1
    pytz==2021.1
    requests==2.25.1
    six==1.15.0
    tqdm==4.60.0
    urllib3==1.26.4
    xarray==0.17.0
